k8s/counter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: counter
