k8s/counter-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-route
spec:
  path: /counter/counter
  to:
    name: counter
    weight: 100
    kind: Service
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: http
